--- a/ExpenseApp/Views/Shared/_Layout.cshtml
+++ b/ExpenseApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <!-- Basic Styles -->
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/font-awesome.min.css">
+    <link href="~/Content/ui-bootstrap-csp.css" rel="stylesheet" type="text/css" media="screen" />
 
     <!-- SmartAdmin Styles : Caution! DO NOT change the order -->
     <link rel="stylesheet" type="text/css" media="screen" href="~/Content/smartadmin-production-plugins.min.css">
@@ -92,7 +93,8 @@
 
     <!-- BOOTSTRAP JS -->
     <script src="~/Scripts/bootstrap/bootstrap.min.js"></script>
-
+    <!-- BOOTSTRAP UI-->>
+    <script src="~/Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <!-- CUSTOM NOTIFICATION -->
     <script src="~/Scripts/notification/SmartNotification.min.js"></script>
 
