--- a/ExpenseApp/Views/Employee/Index.cshtml
+++ b/ExpenseApp/Views/Employee/Index.cshtml
@@ -1,57 +1,62 @@
-﻿@{
+﻿@model ExpenseApp.Engine.Domain.ViewModels.UserViewModel
+@{
     ViewBag.Title = "Expense Lists";
 }
 
 <div class="row">
-    <div class="jumbotron" data-ng-app="expenseModule" data-ng-controller="expensesController">
-        <div class="row">
-            <table class="table table-bordered table-hover">
+    <div class="jumbotron" data-ng-app="expenseModule" data-ng-controller="employeeController">
+
+        <div class="row" ng-show="expenses.length>0">
+            <table class="table table-hover">
                 <thead>
-                <tr>
-                    <th class="col-md-3">Created Date</th>
-                    <th class="col-md-3">Total Amount</th>
-                    <th class="col-md-3">Status</th>
-                    <th class="col-md-3">Links</th>
-                </tr>
+                    <tr>
+                        <th class="col-md-3">Created Date</th>
+                        <th class="col-md-3">Total Amount</th>
+                        <th class="col-md-3">Status</th>
+                        <th class="col-md-1"></th>
+                        <th class="col-md-1"></th>
+                        <th class="col-md-1"></th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="expense in expenses | startFrom:(currentPage-1)*pageSize |limitTo:pageSize  ">
-                    <!--startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit-->
-                    <td>{{expense.createdDate}}</td>
-                    <td>{{expense.totalAmount}}</td>
-                    <td>{{expense.lastExpenseActionId}}</td>
-                    <td>
-                        <a href="#" class="btn btn-default btn-sm">Send</a>
-                        <a href="/employee/saveexpense/{{expense.id}}" class="btn btn-default btn-sm">Edit</a>
-                        <button class="btn btn-default btn-sm" confirmed-click="deleteExpense({{expense.id}})" ng-confirm-click="">Delete</button>
-                    </td>
-                </tr>
+                    <tr ng-repeat="expense in expenses | startFrom:(currentPage-1)*pageSize |limitTo:pageSize">
+                        <td>{{expense.createdDate}}</td>
+                        <td>{{expense.totalAmount}}</td>
+                        <td>{{expense.currentStatus}}</td>
+                        <td><a ng-show="expense.lastExpenseActionId == 1" href="/employee/saveexpense/{{expense.id}}?userId={{variables.userId}}" class="btn btn-default btn-sm">Edit</a></td>
+                        <td><button  ng-confirm-click="Selected expense will be deleted." class=" btn btn-default btn-sm" confirmed-click="deleteExpense({{expense.id}})">Delete</button></td>
+                        <td><button ng-show="expense.lastExpenseActionId == 1" ng-confirm-click="Selected expense will be sent to a manager to get approved." class="btn btn-default btn-sm" confirmed-click="sendForApproval({{expense.id}})">Approve</button></td>
+                    </tr>
                 </tbody>
             </table>
-                <ul uib-pagination total-items="expenses.length" ng-model="currentPage" items-per-page="pageSize" class="pull-right"></ul>
-                <br />
-                <a href="~/employee/saveexpense/0" class="btn btn-default btn-sm">Create Expense</a>
+            <ul uib-pagination total-items="expenses.length" ng-model="currentPage" items-per-page="pageSize" class="pull-right"></ul>
+            <br />
+            
         </div>
+        <a href="~/employee/saveexpense/0?userId={{variables.userId}}" class="btn btn-primary btn-sm">Create Expense</a>
     </div>
 </div>
 
 
 @section angular{
     <script type="text/javascript">
-        var actionUrls = {
-            getExpenseByUserId: "@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Expenses", action = "GetExpenseByUserId" })",
-            deleteExpense:"@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Expenses", action = "DeleteExpense" })"
-        };
+    var actionUrls = {
+        getExpenseByUserId: "@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Expenses", action = "GetExpenseByUserId" })",
+        deleteExpense: "@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Expenses", action = "DeleteExpense" })",
+        sendExpenseForApproval: "@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Expenses", action = "SendExpenseForApproval" })"
+    };
+
+    var userId = @Model.ID;
     </script>
 
     <!-- ANGULARJS -->
-
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/angular-route.js"></script>
     <script src="~/Scripts/angular/module/expenseModule.js"></script>
     <script src="~/Scripts/angular/service/expenseService.js"></script>
     <script src="~/Scripts/angular/directive/confirmationDirective.js"></script>
     <script src="~/Scripts/angular/directive/pageFilter.js"></script>
-    <script src="~/Scripts/angular/controller/expensesController.js"></script>
+    <script src="~/Scripts/angular/controller/employeeController.js"></script>
     <script src="~/Scripts/moment.js"></script>
+
 }
