--- a/ExpenseApp/Views/Shared/_Layout.cshtml
+++ b/ExpenseApp/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en-us" id="extr-page">
 <head>
     <meta charset="utf-8">
-    <title> Veripark.Expense </title>
+    <title> Veripark-Expense </title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -24,11 +24,9 @@
     <!-- We recommend you use "your_style.css" to override SmartAdmin
          specific styles this will also ensure you retrain your customization with each SmartAdmin update.
     <link rel="stylesheet" type="text/css" media="screen" href="Content/your_style.css"> -->
-
-
     <!-- #FAVICONS -->
     @*<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">*@
+        <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">*@
 
     <!-- #GOOGLE FONT -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">
@@ -38,14 +36,16 @@
 <body class="animated fadeInDown">
     <header id="header">
 
-        <div id="logo-group">
-            <a href="/Home/Index" id="logo"><img src="~/Content/Images/ExpenseLogo.png" alt="Expense"></a>
-        </div>
+            <div id="logo-group">
+                <a href="/Home/Index" id="logo"><img src="~/Content/Images/ExpenseLogo.png" alt="Expense"></a>
+            </div>
 
-        <span id="extr-page-header-space">
-            <!-- <span class="hidden-mobile hiddex-xs">Need an account?</span> -->
-            <a href="#" class="btn btn-default">Login</a>
-        </span>
+            <span id="extr-page-header-space">
+                <a href="/home/login" class="btn btn-primary">Login</a>
+            </span>
+            <span id="extr-page-header-space">
+                <a href="/home/logoff" class="btn btn-primary">Logoff</a>
+            </span>
 
     </header>
 
@@ -53,7 +53,7 @@
 
         <div class="container body-content">
             @RenderBody()
-            @RenderSection("angular",required:false)
+            @RenderSection("angular", required: false)
         </div>
 
         <!-- MAIN CONTENT -->
@@ -63,7 +63,6 @@
     <!--================================================== -->
     <!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
     <script data-pace-options='{ "restartOnRequestAfter": true }' src="~/Scripts/plugin/pace/pace.min.js"></script>
-
     <!-- Link to Google CDN's jQuery + jQueryUI; fall back to local -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
@@ -87,10 +86,17 @@
     <!-- JS TOUCH : include this plugin for mobile drag / drop touch events-->
     <script src="~/Scripts/plugin/jquery-touch/jquery.ui.touch-punch.min.js"></script>
 
+    <!--ANGULARJS-->
+    @*<script src="~/Scripts/angular.js"></script>
+    <script src="~/Scripts/angular-route.js"></script>
+    <script src="~/Scripts/angular/module/expenseModule.js"></script>
+    <script src="~/Scripts/angular/service/expenseService.js"></script>*@
+    @*<script src="~/Scripts/angular/controller/layoutController.js"></script>*@
+
     <!-- BOOTSTRAP JS -->
     <script src="~/Scripts/bootstrap/bootstrap.min.js"></script>
-    <script src="~/Scripts/angular-ui/ui-bootstrap.min.js"></script>
     <script src="~/Scripts/angular-ui/ui-bootstrap-tpls-2.5.0.min.js"></script>
+
 
     <!-- CUSTOM NOTIFICATION -->
     <script src="~/Scripts/notification/SmartNotification.min.js"></script>
@@ -125,20 +131,21 @@
     <h1>Your browser is out of date, please update your browser by going to www.microsoft.com/download</h1>
 
     <![endif]-->
-
     <!-- MAIN APP JS FILE -->
     <script src="~/Scripts/app.min.js"></script>
 
     <!-- ENHANCEMENT PLUGINS : NOT A REQUIREMENT -->
-
     <!-- PAGE RELATED PLUGIN(S) -->
     <script src="~/Scripts/plugin/jquery-form/jquery-form.min.js"></script>
 
     <script type="text/javascript">
 
         // DO NOT REMOVE : GLOBAL FUNCTIONS!
+        @*var userUrls = {
+            checkUserActivity: "@Url.RouteUrl("DefaultApi", new { httpRoute = "", controller = "Users", action = "CheckUserActivity" })"
+        }*@
 
-        $(document).ready(function() {
+        $(document).ready(function () {
 
             pageSetUp();
 
@@ -465,36 +472,36 @@
             //    }
             //});
 
-            var $loginForm = $("#login-form").validate({
-                // Rules for form validation
-                rules: {
-                    email: {
-                        required: true,
-                        email: true
-                    },
-                    password: {
-                        required: true,
-                        minlength: 3,
-                        maxlength: 20
-                    }
-                },
+            //var $loginForm = $("#login-form").validate({
+            //    // Rules for form validation
+            //    rules: {
+            //        email: {
+            //            required: true,
+            //            email: true
+            //        },
+            //        password: {
+            //            required: true,
+            //            minlength: 3,
+            //            maxlength: 20
+            //        }
+            //    },
 
-                // Messages for form validation
-                messages: {
-                    email: {
-                        required: 'Please enter your email address',
-                        email: 'Please enter a VALID email address'
-                    },
-                    password: {
-                        required: 'Please enter your password'
-                    }
-                },
+            //    // Messages for form validation
+            //    messages: {
+            //        email: {
+            //            required: 'Please enter your email address',
+            //            email: 'Please enter a VALID email address'
+            //        },
+            //        password: {
+            //            required: 'Please enter your password'
+            //        }
+            //    },
 
-                // Do not change code below
-                errorPlacement: function(error, element) {
-                    error.insertAfter(element.parent());
-                }
-            });
+            //    // Do not change code below
+            //    errorPlacement: function (error, element) {
+            //        error.insertAfter(element.parent());
+            //    }
+            //});
 
             //var $orderForm = $("#order-form").validate({
             //    // Rules for form validation
